<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.github.komidawi.pizzacostcalculator.screen.add.AddPizzaFragmentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.add.AddPizzaFragment">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/pizza_pizzeria_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ems="12"
                android:hint="@string/pizza_pizzeria_input_hit"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={viewModel.pizzeria}" />

            <EditText
                android:id="@+id/pizza_name_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ems="12"
                android:hint="@string/pizza_name_input_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@={viewModel.name}" />

            <EditText
                android:id="@+id/pizza_size_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ems="12"
                android:hint="@string/pizza_size_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@={viewModel.size}" />

            <EditText
                android:id="@+id/pizza_price_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ems="12"
                android:hint="@string/pizza_price_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@={viewModel.price}" />

            <EditText
                android:id="@+id/pizza_delivery_cost_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:ems="12"
                android:hint="@string/pizza_delivery_cost_input_hint"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:text="@={viewModel.deliveryCost}" />

            <TextView
                android:id="@+id/list_pizza_ratio_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@{@string/pizza_ratio_display_text(viewModel.ratio)}"
                android:textAlignment="center"
                android:textSize="18sp"
                tools:text="180.50 unit / area" />

            <Button
                android:id="@+id/pizza_add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="@{() -> viewModel.handleAddPizza()}"
                android:text="@string/pizza_add_button_text" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>