...
        android:id="@+id/list_item_pizza_element_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(pizza)}">

        <TextView
            android:id="@+id/pizza_name_display"
            style="@style/PizzaListItemElementText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/pizza_name_label"
            app:layout_constraintStart_toEndOf="@+id/pizza_name_label"
...
            app:layout_constraintStart_toEndOf="@+id/pizza_ratio_label"
            app:layout_constraintTop_toTopOf="@+id/pizza_ratio_label"
            app:listPizzaRatioDisplay="@{pizza}"
            tools:text="Ratio" />

        <ImageButton
            android:id="@+id/pizza_remove_button"
            style="@style/PizzaListItemElementText"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:onClick="@{() -> viewModel.onRemove(pizza)}"
            android:scaleType="center"
...
